# src/main/java/com/brad/pms/dto/request/FeedbackPageQry.java
@@ -1,0 +1,14 @@
+package com.brad.pms.dto.request;
+
+import com.brad.pms.common.page.BasePage;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+@Data
+@EqualsAndHashCode(callSuper = true)
+public class FeedbackPageQry extends BasePage {
+    private String keyword;
+    private String feedbackType;
+    private String priority;
+    private String status;
+}
